--- a/kitchendelights/src/assets/css/Login.css
+++ b/kitchendelights/src/assets/css/Login.css
@@ -1,26 +1,25 @@
 /* Login.css */
 .login-form-container-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5);
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 100;
 }
 
 .login-form {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: 125px;
     height: 500px;
     width: 700px;
     background-image: url('../images/Background.jpg');
     background-size: cover;
     background-position: center;
     border-radius: 20px;
+    z-index: 100;
   }
 
   .login-container {
@@ -28,9 +27,9 @@
     background: rgba(255, 255, 255, 0.8);
     padding: 20px;
     border-radius: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     display: flex;
     flex-direction: column;
+    z-index: 100;
   }
   
   input[type="text"],
