--- a/kitchendelights/src/assets/css/Login.css
+++ b/kitchendelights/src/assets/css/Login.css
@@ -1,36 +1,41 @@
 /* Login.css */
-.login-form-container-overlay {
-  position: absolute;
+  .login-form-container-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     z-index: 100;
-}
-
-.login-form {
+    background: rgba(0, 0, 0, 0.5);
+  }
+  
+  .login-form {
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 125px;
     height: 500px;
     width: 700px;
     background-image: url('../images/Background.jpg');
     background-size: cover;
     background-position: center;
     border-radius: 20px;
-    z-index: 100;
+    z-index: 101;
   }
-
+  
   .login-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 400px;
     background: rgba(255, 255, 255, 0.8);
     padding: 20px;
     border-radius: 20px;
-    display: flex;
-    flex-direction: column;
-    z-index: 100;
+    z-index: 102;
   }
   
   input[type="text"],
@@ -38,6 +43,9 @@
     margin: 10px 0;
     padding: 10px;
     font-size: 16px;
+    width: 90%;
+    margin-left: 7px;
+    margin-top: 7px;
   }
   
   .submit-button {
@@ -48,6 +56,7 @@
     font-size: 16px;
     cursor: pointer;
     border-radius: 4px;
+    width: 100%;
   }
   
   .submit-button:hover {
@@ -70,8 +79,6 @@
   
   button.btnLogin {
     position: fixed;
-    top: 20px;
-    right: 20px;
     padding: 10px 15px;
     background-color: #6699ff;
     color: white;
