--- a/kitchendelights/src/assets/css/Login.css
+++ b/kitchendelights/src/assets/css/Login.css
@@ -1,15 +1,14 @@
 /* Login.css */
   .login-form-container-overlay {
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    margin-left: 270px;
+    margin-top: 170px;
+    width: 40%;
+    height: 40%;
     display: flex;
     align-items: center;
     justify-content: center;
     z-index: 100;
-    background: rgba(0, 0, 0, 0.5);
   }
   
   .login-form {
@@ -23,7 +22,7 @@
     background-size: cover;
     background-position: center;
     border-radius: 20px;
-    z-index: 101;
+    z-index: 100;
   }
   
   .login-container {
@@ -35,9 +34,16 @@
     background: rgba(255, 255, 255, 0.8);
     padding: 20px;
     border-radius: 20px;
-    z-index: 102;
+    display: flex;
+    flex-direction: column;
+    z-index: 100;
+    pointer-events: none;
   }
-  
+
+  .login-container > * {
+    pointer-events: auto;
+  }
+
   input[type="text"],
   input[type="password"] {
     margin: 10px 0;
