--- a/kitchendelights/src/assets/css/Login.css
+++ b/kitchendelights/src/assets/css/Login.css
@@ -97,3 +97,17 @@
   button.btnLogin:hover {
     background-color: #2c3e50;
   }
+
+
+  slick-prev {
+    left: 3% !important;
+    z-index: 1;
+  }
+  .slick-next {
+    right: 3% !important;
+    z-index: 1;
+  }
+
+
+  
+
